# BasketScoutDataService

./: .env.example  .gitignore  ADMIN_SECURITY.md  AGENTS.md  ANDROID_INTEGRATION_GUIDE.md  API_CONTRACT.md  ARCHITECTURE.md  CLAUDE.md  DATA_SOURCE_STRATEGY.md  DEPLOYMENT_DECISION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  HANDOVER.md  MANUAL_PRICE_FEED.md  PRODUCT_SPEC.md  PROVIDER_STATUS.md  README.md  REAL_PRICE_PROVIDER_AUDIT.md  REAL_PRICE_TEST_MATRIX.md  SCRAPING_POLICY.md  SCRAPLING_EVALUATION.md  SCRAPLING_USAGE_POLICY.md  WEB_PRICE_OBSERVATION_POLICY.md  WEB_PRICE_OBSERVATION_RESULTS.md  WEB_PRICE_OBSERVATION_RUNBOOK.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  daily-price-observation.yml  daily-scrape.yml  daily_scrape.yml
app/: __init__.py  main.py
app/api/: __init__.py  routes_admin.py  routes_basket.py  routes_health.py  routes_prices.py  routes_products.py  routes_providers.py
artifacts/: latest-smoke.txt
data/: basketscout.db-shm  basketscout.db-wal
scripts/: dev.ps1  doctor.ps1  lint.ps1  manual_feed.ps1  prod_smoke.ps1  run.ps1  smoke.ps1  test.ps1
tests/: test_admin_manual.py  test_basket_compare.py  test_cache_policy.py  test_config.py  test_daily_scrape_workflow.py  test_daily_workflow.py  test_health.py  test_mock_provider.py  test_normalization.py  test_open_prices_tesco.py  test_prices_route.py  test_provider_status.py  test_scrapling_observation.py  test_web_observation_adapters.py  test_web_price_observation.py  test_web_watchlist_io.py
(+74 files in other folders)
